# observatory

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: 01_combined_formatters.py  01_simple.py  02_formatters.py  03_coloring.py  04_complex.py
observatory/: __init__.py  ansi_colors.py  colors.py  core.py  formatters.py  loggers.py  modifiers.py  utils.py
